added functionality and tests for adding and removing disciplines for a participant on separate endpoints